# Netmon

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  capture.py  database.py  main.py  utils.py
src/assets/: style.css
