[project]
name = "netmon"
version = "0.1.0"
description = ""
authors = [
  { name = "adikpb", email = "67222969+adikpb@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dash (>=2.18.2,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "plotly (>=6.0.0,<7.0.0)",
  "mitmproxy (>=11.1.3,<12.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
